--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+.hs {
+  width: 20px;
+  height: 15px;
+}
+.ms {
+  width: 20px;
+  height: 15px;
+}
+    </style>
     <meta charset="utf-8">
     <title>koti_main</title>
   </head>
   <body>
-    <a href="highschool.html"><img src="https://lh3.google.com/u/0/d/1zagc8OPDK0F6FF0MN3ozpy9c4eeeTMSU=w1366-h637-iv1"></a>
-    <a href="midschool.html"><img src="https://lh3.google.com/u/0/d/1lHYhpld1s1gGkO4rUByDciPQV4KJbfXb=w1366-h637-iv1"></a>
+    <a href="highschool.html"><img class="hs" src="https://lh3.google.com/u/0/d/1zagc8OPDK0F6FF0MN3ozpy9c4eeeTMSU=w1366-h637-iv1"></a>
+    <a href="midschool.html"><img class="ms" src="https://lh3.google.com/u/0/d/1lHYhpld1s1gGkO4rUByDciPQV4KJbfXb=w1366-h637-iv1"></a>
   </body>
 </html>
